Update some files

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /Rascunhos
 /.vscode
 /.ipynb_checkpoints
+/Projeto/Raw
 /Projeto/.ipynb_checkpoints
 .~lock.
 /Projeto/Data/Output/.predictions_autoarima.csv
